--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
 /********NAVBAR STARTS HERE**********/
 .navbar .nav-link {
   font-size: 16px;
@@ -52,3 +57,8 @@
   color: #ffffff; }
   #video-play a {
     color: #ffffff; }
+
+/*******FOOTER STARTS HERE******/
+footer#main-footer {
+  background: #222;
+  color: #fff; }
