--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,3 +62,19 @@
 footer#main-footer {
   background: #222;
   color: #fff; }
+
+#page-header {
+  height: 200px;
+  background: url("../images/image2.jpg");
+  background-position: 0 -360px;
+  background-attachment: fixed;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-bottom: 1px solid #eee;
+  padding-top: 50px; }
+
+#about img {
+  margin-top: -50px; }
+
+#testimonial-section {
+  height: 200px; }
