--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -82,3 +82,22 @@ footer#main-footer {
   background: #222;
   color: #fff;
 }
+
+#page-header {
+  height: 200px;
+  background: url('../images/image2.jpg');
+  background-position: 0 -360px;
+  background-attachment: fixed;
+  color: #fff;
+  background-color: $dark-overlay;
+  border-bottom: 1px solid #eee;
+  padding-top: 50px;
+}
+
+#about img {
+  margin-top: -50px;
+}
+
+#testimonial-section {
+  height: 200px;
+}
