--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,10 @@ body {
   overflow-x: hidden; }
 
 /********NAVBAR STARTS HERE**********/
+.navbar-brand {
+  text-transform: uppercase;
+  font-size: 24px; }
+
 .navbar .nav-link {
   font-size: 16px;
   text-transform: uppercase;
