--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,11 @@ body {
   overflow-x: hidden;
 }
 /********NAVBAR STARTS HERE**********/
+
+.navbar-brand {
+  text-transform: uppercase;
+  font-size: 24px;
+}
 .navbar {
   .nav-link {
     font-size: 16px;
